Added the Ai-Quiz-Hub Project details

--- a/index.html
+++ b/index.html
@@ -1599,6 +1599,76 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="project-card" data-aos="fade-up" data-aos-delay="1000" data-project="ai-quiz-hub">
+                       <div class="project-glow"></div>
+                       <div class="project-image">
+                           <img src="https://images.unsplash.com/photo-1606092195730-5d7b9af1efc5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="AI Quiz Hub">
+                           <div class="project-overlay">
+                               <div class="overlay-content">
+                                   <div class="project-stats">
+                                       <div class="stat-item">
+                                           <span class="stat-value">AI-Powered</span>
+                                           <span class="stat-desc">Quiz Generation</span>
+                                       </div>
+                                       <div class="stat-item">
+                                           <span class="stat-value">Multi-Language</span>
+                                           <span class="stat-desc">Support</span>
+                                       </div>
+                                   </div>
+                                   <div class="project-actions">
+                                       <button class="action-btn demo-btn">
+                                           <i class="fas fa-play"></i>
+                                           <span>Live Demo</span>
+                                       </button>
+                                       <button class="action-btn code-btn">
+                                           <i class="fab fa-github"></i>
+                                           <span>View Code</span>
+                                       </button>
+                                   </div>
+                               </div>
+                           </div>
+                       </div>
+                       <div class="project-content">
+                           <div class="project-header">
+                               <div class="project-category">AI Application</div>
+                               <div class="project-status active">Active</div>
+                           </div>
+                           <h3>AI Quiz Hub - Intelligent Quiz Platform</h3>
+                           <p>An intelligent, interactive quiz platform powered by Meta's Llama 3.1 70B model via OpenRouter API. Features stunning 3D backgrounds with Vanta.js neural networks, immersive audio system, multi-language support (English, Hindi, Bengali), and comprehensive analytics with 50 questions per quiz.</p>
+                           <div class="project-tags">
+                               <span class="tag primary">#Next.js</span>
+                               <span class="tag secondary">#TypeScript</span>
+                               <span class="tag accent">#Llama AI</span>
+                               <span class="tag highlight">#Vanta.js</span>
+                           </div>
+                           <div class="project-metrics">
+                               <div class="metric">
+                                   <div class="metric-icon">🧠</div>
+                                   <div class="metric-text">AI-Powered</div>
+                               </div>
+                               <div class="metric">
+                                   <div class="metric-icon">🌐</div>
+                                   <div class="metric-text">Multi-Language</div>
+                               </div>
+                               <div class="metric">
+                                   <div class="metric-icon">🎨</div>
+                                   <div class="metric-text">3D Graphics</div>
+                               </div>
+                           </div>
+                           <div class="project-links">
+                               <a href="https://github.com/eliot-99/AI-Quiz-Hub" target="_blank" class="btn btn-primary">
+                                   <i class="fab fa-github"></i>
+                                   Repository
+                               </a>
+                               <a href="https://ai-quiz-hub-pi.vercel.app/" target="_blank" class="btn btn-outline">
+                                   <i class="fas fa-external-link-alt"></i>
+                                   Live Demo
+                               </a>
+                           </div>
+                       </div>
+                   </div>
+
                 </div>
             </div>
         </section>
