--- a/index.html
+++ b/index.html
@@ -1603,7 +1603,7 @@
                     <div class="project-card" data-aos="fade-up" data-aos-delay="1000" data-project="ai-quiz-hub">
                        <div class="project-glow"></div>
                        <div class="project-image">
-                           <img src="https://images.unsplash.com/photo-1606092195730-5d7b9af1efc5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="AI Quiz Hub">
+                           <img src="https://images.unsplash.com/photo-1544535830-9df3f56fff6a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8cXVlc3Rpb258ZW58MHx8MHx8fDA%3D" alt="AI Quiz Hub">
                            <div class="project-overlay">
                                <div class="overlay-content">
                                    <div class="project-stats">
